adding new raffles implemented