@@ -1,6 +1,7 @@
 package com.allianz.raffle.controller;
 
 import com.allianz.raffle.model.Raffle;
+import com.allianz.raffle.model.AnswerOption;
 import com.allianz.raffle.model.PrizeTier;
 import com.allianz.raffle.model.enums.RaffleStatus;
 import com.allianz.raffle.service.RaffleService;
@@ -104,7 +105,7 @@ class RaffleControllerTest {
         raffle.setStartDate(now.plusDays(2));
         raffle.setEndDate(now.plusDays(3));
         raffle.setQuestion("Test Question?");
-        raffle.setAnswerOptions(Arrays.asList("Option 1", "Option 2"));
+        raffle.setAnswerOptions(List.of(AnswerOption.of("Option 1", false), AnswerOption.of("Option 2", true), AnswerOption.of("Option 3", false)));
         
         PrizeTier prizeTier = new PrizeTier();
         prizeTier.setTier(1);
